link update and mobile resources fix

--- a/new-site/about/index.html
+++ b/new-site/about/index.html
@@ -159,9 +159,10 @@
                          <a href="mailto:info@tinyatlasquarterly.com?Subject=Tiny%20Atlas%20Quarterly">info@tinyatlasquarterly.com</a>
                        </p>
 
-                      <p>Press Inquries 	&amp; Ad Sales: <a href="mailto:jill@tinyatlasquarterly.com?Subject=Tiny%20Atlas%20Quarterly">
-                       Jill Hudes Lindenbaum</a><br /></p>
-                       <a href="stockists.html">Stockists</a>
+                      <p>Press Inquries 	&amp; Ad Sales<br/>
+                      <a href="mailto:jill@tinyatlasquarterly.com?Subject=Tiny%20Atlas%20Quarterly">Jill Hudes Lindenbaum</a></p>
+
+                      <p><a href="stockists.html">Stockists</a></p> 
 
                        <p class="italics">Image by: Emily Shur</p>
                        </div>
