--- a/new-site/index.html
+++ b/new-site/index.html
@@ -171,22 +171,24 @@
 
 
                 <div class="trip">
-                  <a href="#">
+                  <a href="events/tahiti-tofino/index.html#tahiti">
                   <img src="images/trip-preview-tahiti.jpg" alt=""class="trip-preview lazy">
                     <div class="details">
+                        <span class="meta">March 2017</span>
                         <h3>Tahiti</h3>
                         <p>The islands, deep in the pacific, offer tropical landscapes, a reef accessible in minutes that’s a mecca for underwater wildlife just waiting to be photographed, and equally exciting surf in each spot.</p>
-                        <button>View Trip</button>
+                        <span class="link-style">View Trip</span>
                     </div>
                     </a>
                 </div>
 
                 <div class="trip">
-                    <a href="#"><img src="images/trip-preview-tofino.jpg" alt=""class="trip-preview lazy">
+                    <a href="events/tahiti-tofino/index.html#tofino"><img src="images/trip-preview-tofino.jpg" alt=""class="trip-preview lazy">
                     <div class="details">
+                      <span class="meta">October 2016</span>
                         <h3>Tofino</h3>
                         <p>On Vancouver Island we have dreamed up an ideal five-day vacation that combines photography, surf and outdoor adventure – shaped by a live-local travel itinerary and with planet conservation at the heart of the experience.</p>
-                        <button>View Trip</button>
+                        <span class="link-style">View Trip</span>
                     </div>
                     </a>
                 </div>
