added header to events

--- a/new-site/events/leadinghotelsgiveaway/index.html
+++ b/new-site/events/leadinghotelsgiveaway/index.html
@@ -9,6 +9,7 @@
 
         <link rel="stylesheet" type="text/css" href="../css/normalize.css" />
         <link rel="stylesheet" type="text/css" href="../../css/fonts.css" />
+        <link rel="stylesheet" type="text/css" href="../../css/header.css" />
         <link rel="stylesheet" type="text/css" href="../css/pages-events.css" />
         <link rel="shortcut icon" href="../../images/favicon.png">
 
@@ -118,7 +119,7 @@ var people = [
         "hotel": "London, England",
         "link": "http://www.lhw.com/hotel/Cafe-Royal-Hotel-London-England?rooms=1&numadult1=2&numchild1=0"
     },
-	
+
 	{
         "image": "@scooteromatours_Belmond-Villa-San-Michele-Fiesole-Italy",
         "gram": "scooteromatours",
@@ -126,7 +127,7 @@ var people = [
         "hotel": "Highland, Scotland",
         "link": "http://www.lhw.com/hotel/Belmond-Villa-San-Michele-Fiesole-Italy?rooms=1&numadult1=2&numchild1=0"
     },
-	
+
     {
         "image": "@ernathan-lhorizon-resort-and-spa-01-sq",
         "gram": "ernathan",
@@ -188,16 +189,33 @@ $(function() {
 
 </script>
 
-<!-- <div class="header-container">
-			<div class="header-links-container">
+<div class="header-container">
+    <div class="header-logo">
+        <a href="../../index.html"><img src="../../images/TAQ-logo.png" alt="" class="logo"></a>
+    </div>
+    <div class="header-links-container">
+      <!-- <span class="header-links link-active"><a href="index.html">Current Issue</a></span> -->
+      <span class="header-links list-triangle"><a href="../../index.html">Current Issue</a>
+       <ul>
+         <li><a href="../../about/editors-letter.html">Editor's Letter</a></li>
+         <li><a href="../../about/masthead.html">Masthead</a></li>
+       </ul>
+     </span>
 
-            <span class="header-links"><a href="about/index.html">Events</a></span>
-            <span class="header-links"><a href="about/index.html">About</a></span>
-			<span class="header-links"><a href="about/masthead.html">Masthead</a></span>
-            <span class="header-links"><a href="about/stockists.html">Stockists</a></span>
-            <span class="header-links"><a href="http://shop.tinyatlasquarterly.com/products/pre-order-the-printed-annual" target="_blank">Shop</a></span>
-            </div>
-</div> -->
+     <span class="header-links"><a href="../../about/index.html">About</a></span>
+
+    <span class="header-links list-triangle"><a href="../index.html">Events</a>
+          <ul>
+            <li><a href="../solas/index.html">SOLAS</a></li>
+            <li><a href="../tahiti-tofino/index.html">Tiny Atlas Trips</a></li>
+            <li><a href="index.html"  class="link-active">Giveaway: Leading Hotels</a></li>
+            <li><a href="../montauk/index.html">Montauk Show</a></li>
+          </ul>
+        </span>
+
+        <span class="header-links"><a href="https://www.alitedesigns.com/" target="_blank">Shop</a></span>
+    </div>
+</div>
 
 
 
