--- a/new-site/events/montauk/index.html
+++ b/new-site/events/montauk/index.html
@@ -10,6 +10,7 @@
         <link rel="stylesheet" type="text/css" href="../css/normalize.css" />
         <link rel="stylesheet" type="text/css" href="../../css/fonts.css" />
         <link rel="stylesheet" type="text/css" href="../css/pages-events.css" />
+        <link rel="stylesheet" type="text/css" href="../../css/header.css" />
         <link rel="shortcut icon" href="../../images/favicon.png">
 
         <script src="http://code.jquery.com/jquery-latest.js"></script>
@@ -746,16 +747,34 @@ $(function() {
 
 </script>
 
-<!-- <div class="header-container">
-			<div class="header-links-container">
+<div class="header-container">
+    <div class="header-logo">
+        <a href="../../index.html"><img src="../../images/TAQ-logo.png" alt="" class="logo"></a>
+    </div>
+    <div class="header-links-container">
+      <!-- <span class="header-links link-active"><a href="index.html">Current Issue</a></span> -->
+      <span class="header-links list-triangle"><a href="../../index.html">Current Issue</a>
+       <ul>
+         <li><a href="../../about/editors-letter.html">Editor's Letter</a></li>
+         <li><a href="../../about/masthead.html">Masthead</a></li>
+       </ul>
+     </span>
 
-            <span class="header-links"><a href="about/index.html">Events</a></span>
-            <span class="header-links"><a href="about/index.html">About</a></span>
-			<span class="header-links"><a href="about/masthead.html">Masthead</a></span>
-            <span class="header-links"><a href="about/stockists.html">Stockists</a></span>
-            <span class="header-links"><a href="http://shop.tinyatlasquarterly.com/products/pre-order-the-printed-annual" target="_blank">Shop</a></span>
-            </div>
-</div> -->
+     <span class="header-links"><a href="../../about/index.html">About</a></span>
+
+    <span class="header-links list-triangle"><a href="../index.html">Events</a>
+          <ul>
+            <li><a href="../solas/index.html">SOLAS</a></li>
+            <li><a href="../tahiti-tofino/index.html">Tiny Atlas Trips</a></li>
+            <li><a href="../leadinghotelsgiveaway/index.html">Giveaway: Leading Hotels</a></li>
+            <li><a href="index.html" class="link-active">Montauk Show</a></li>
+          </ul>
+        </span>
+
+        <span class="header-links"><a href="https://www.alitedesigns.com/" target="_blank">Shop</a></span>
+    </div>
+</div>
+
 <div class="details">
 <h4>#mytinyatlasMontauk</h4>
 <h1> Winners Gallery</h1>
