--- a/new-site/events/solas/index.html
+++ b/new-site/events/solas/index.html
@@ -36,31 +36,34 @@ $(function() {
 
 
 </script>
-<!--
-  <div class="header-container">
-   <div class="header-logo"><a href="../../index.html"><img src="../../images/TAQ-logo.png" alt="" class="logo"></a></div>
-<div class="header-links-container">
- <span class="header-links"><a href="events/solas/index.html">Events &raquo;</a>
-   <ul>
-     <li><a href="events/solas/index.html">SOLAS</a></li>
-     <li><a href="events/tahiti-tofino/index.html">Tiny Atlas Trips</a></li>
-     <li><a href="events/leadinghotelsgiveaway/index.html">Giveaway: Leading Hotels</a></li>
-     <li><a href="events/montauk/index.html">Montauk Show</a></li>
-   </ul>
- </span>
- <span class="header-links"><a href="about/index.html">About</a></span>
- <span class="header-links"><a href="about/masthead.html">Masthead &raquo;</a>
-   <ul>
-     <li><a href="about/editors-letter.html">Editor's Letter</a></li>
-   </ul>
- </span>
- <span class="header-links"><a href="about/stockists.html">Stockists</a></span>
- <span class="header-links"><a href="http://shop.tinyatlasquarterly.com/collections/all" target="_blank">Shop</a></span>
+<div class="header-container">
+    <div class="header-logo">
+        <a href="../../index.html"><img src="../../images/TAQ-logo.png" alt="" class="logo"></a>
+    </div>
+    <div class="header-links-container">
+      <!-- <span class="header-links link-active"><a href="index.html">Current Issue</a></span> -->
+      <span class="header-links list-triangle"><a href="../../index.html">Current Issue</a>
+       <ul>
+         <li><a href="../../about/editors-letter.html">Editor's Letter</a></li>
+         <li><a href="../../about/masthead.html">Masthead</a></li>
+       </ul>
+     </span>
+
+     <span class="header-links"><a href="../../about/index.html">About</a></span>
+
+    <span class="header-links list-triangle"><a href="../index.html">Events</a>
+          <ul>
+            <li><a href="index.html" class="link-active">SOLAS</a></li>
+            <li><a href="../tahiti-tofino/index.html">Tiny Atlas Trips</a></li>
+            <li><a href="../leadinghotelsgiveaway/index.html">Giveaway: Leading Hotels</a></li>
+            <li><a href="../montauk/index.html">Montauk Show</a></li>
+          </ul>
+        </span>
+
+        <span class="header-links"><a href="https://www.alitedesigns.com/" target="_blank">Shop</a></span>
+    </div>
 </div>
-</div> -->
 
-
-<div class="header"><a href="../../index.html"><img src="../../images/TAQ-logo.png" alt="" class="logo"></a></div>
   <div class="img-head" style="background-image: url(../solas/images/header-solas.jpg);">
 <img src="images/SOLAS-logo.png" alt="SOLAS" class="logo">
   </div>
