--- a/new-site/havana/index.html
+++ b/new-site/havana/index.html
@@ -426,26 +426,26 @@
 
                         <h4>Eat: </h4>
 
-                        <h5><a href="http://www.laguarida.com/en/">Paladar La Guardia</a></h5>
+                        <h5><a href="http://www.laguarida.com/en/" target="_blank">Paladar La Guardia</a></h5>
                         <p>A Cuban establishment, serving traditional and adventurous recipes.</p>
 
-                        <h5><a href="https://www.facebook.com/paladardona.eutimia">Paladar Doña Eutemia</a></h5>
+                        <h5><a href="https://www.facebook.com/paladardona.eutimia" target="_blank">Paladar Doña Eutemia</a></h5>
                         <p>A centrally located, family-owned restaurant serving simple and straightforward Cuban cuisine.</p>
 
-                        <h5><a href="http://www.lahabana.com/guide/museo-del-chocolate/">Museo del Chocolate</a></h5>
+                        <h5><a href="http://www.lahabana.com/guide/museo-del-chocolate/" target="_blank">Museo del Chocolate</a></h5>
                         <p>Part museum part coffee shop, the Museo serves addictive cold chocolate drinks.</p>
 
                         <h4>Stay:</h4>
 
-                        <h5><a href="http://www.casaparticular.com/">Casas Particulares</a></h5>
-                        <p>The best way to stay in Havana is rent a room in a private family house. Locals must officially to provide the service, and it’s a great way to help families financially and get a glimpse of authentic Cuban life.<a href="http://www.havanacasaparticular.com/">http://www.havanacasaparticular.com/</a></p>
+                        <h5><a href="http://www.casaparticular.com/" target="_blank">Casas Particulares</a></h5>
+                        <p>The best way to stay in Havana is rent a room in a private family house. Locals must officially to provide the service, and it’s a great way to help families financially and get a glimpse of authentic Cuban life.<a href="http://www.havanacasaparticular.com/" target="_blank">http://www.havanacasaparticular.com/</a></p>
 
                         <h4>Do:</h4>
 
-                        <h5><a href="http://www.bellasartes.cult.cu/">Museo Nacional de Bellas Artes</a></h5>
+                        <h5><a href="http://www.bellasartes.cult.cu/" target="_blank">Museo Nacional de Bellas Artes</a></h5>
                         <p>An expansive museum with collections from Spain, ancient Greece and modern-day Cuba.</p>
 
-                        <h5><a href="http://www.hemingwaycuba.com/finca-la-vigia.html">Museo Hemingway Finca Vigia</a></h5>
+                        <h5><a href="http://www.hemingwaycuba.com/finca-la-vigia.html" target="_blank">Museo Hemingway Finca Vigia</a></h5>
                         <p>An intricate glimpse into the life of Ernest Hemingway, who once adopted Cuba as his home country.</p>
 
                         <h5>El Malecon</h5>
@@ -453,9 +453,9 @@
 
 
                         <p>There are some excellent options for personalized, guided small group trips to Cuba if you don’t want to figure out logistics yourself.</p>
-                        <h5><a href="http://www.coasttocosta.com ">Coast to Coasta</a></h5>
-                        <h5><a href="http://www.intrepidtravel.com">Intrepid Travel</a></h5>
-                        <h5><a href="http://www.elcamino.travel">El Camino</a></h5>
+                        <h5><a href="http://www.coasttocosta.com" target="_blank">Coast to Coasta</a></h5>
+                        <h5><a href="http://www.intrepidtravel.com" target="_blank">Intrepid Travel</a></h5>
+                        <h5><a href="http://www.elcamino.travel" target="_blank">El Camino</a></h5>
 
 
                     </div>
