--- a/new-site/paris/index.html
+++ b/new-site/paris/index.html
@@ -687,47 +687,47 @@
 
                     <h4>Eat:</h4>
 
-                    <h5><a href="http://www.tenbelles.com/">Ten Belles</a></h5>
+                    <h5><a href="http://www.tenbelles.com/" target="_blank">Ten Belles</a></h5>
                     <p>High-quality coffee bar and cafe along the Canal Saint Martin, selling home-baked  pastries and sandwiches.</p>
 
-                    <h5><a href="https://dupainetdesidees.com/en/">Boulangerie des Pains et des Idées</a></h5>
+                    <h5><a href="https://dupainetdesidees.com/en/" target="_blank">Boulangerie des Pains et des Idées</a></h5>
                     <p>Open exclusively on weekdays, come for Escargots à la pistache and petit pain rolls.</p>
 
-                    <h5><a href="https://www.facebook.com/miznonparis/">Miznon</a></h5>
+                    <h5><a href="https://www.facebook.com/miznonparis/" target="_blank">Miznon</a></h5>
                     <p>The Parisian outpost of Israeli chef Eyal Shani’s Tel Aviv restaurant serves the best lamb-kebab pita in the city.</p>
 
-                    <h5><a href="http://www.berthillon.fr/">Berthillon</a></h5>
+                    <h5><a href="http://www.berthillon.fr/" target="_blank">Berthillon</a></h5>
                     <p>Unanimously considered the best homemade, small batch ice-cream in Paris.</p>
 
-                    <h5><a href="https://www.cooperative-de-beaufort.com/">La Coopérative Laitiere du Beaufortain</a></h5>
+                    <h5><a href="https://www.cooperative-de-beaufort.com/" target="_blank">La Coopérative Laitiere du Beaufortain</a></h5>
                     <p>This farmer-cooperative-run shop is a haven for cheese and charcuterie lovers.</p>
 
-                    <h5><a href="http://www.rotondemontparnasse.com/">La Rotonde</a></h5>
+                    <h5><a href="http://www.rotondemontparnasse.com/" target="_blank">La Rotonde</a></h5>
                     <p>Cozy Latin Quarter bistro historically visited by the likes of Picasso, Hemingway and Matisse, known for its traditional French cuisine.</p>
 
                     <h4>Stay:</h4>
 
-                    <h5><a href="http://www.le5codet.com/en/">Le Cinq Codet</a></h5>
+                    <h5><a href="http://www.le5codet.com/en/" target="_blank">Le Cinq Codet</a></h5>
                     <p>Located a short walk from Les Invalides in the 7th arrondissement, the chic 5-star hotel has 67 loft-like rooms with New Nordic touches.</p>
 
-                    <h5><a href="http://hotelpanache.com/en/">Hotel Panache</a></h5>
+                    <h5><a href="http://hotelpanache.com/en/" target="_blank">Hotel Panache</a></h5>
                     <p>A 3-star hotel in the hip 10th arrondissement with quirky Parisian charm and art-deco furnishings and retro touches.</p>
 
-                    <h5><a href="http://www.mamashelter.com/en/paris/">Mama Shelter Paris</a></h5>
+                    <h5><a href="http://www.mamashelter.com/en/paris/" target="_blank">Mama Shelter Paris</a></h5>
                     <p>Young, affordable and designed by Philippe Starck, this casual hotel features a pizzeria and a rooftop bar.</p>
 
                     <h4>Do:</h4>
 
-                    <h5><a href="https://www.centrepompidou.fr/en">Centre Pompidou</a></h5>
+                    <h5><a href="https://www.centrepompidou.fr/en" target="_blank">Centre Pompidou</a></h5>
                     <p>The city's boldest center for contemporary art and design, housed in a striking building designed by Italian architect Renzo Piano.</p>
 
                     <h5>Rue de Rennes</h5>
                     <p>A wide, bustling street in the heart of the Latin Quarter, chockablock with boutiques, antique and jewelry shops.</p>
 
-                    <h5><a href="http://www.mosqueedeparis.net/">La Mosquée de Paris</a></h5>
+                    <h5><a href="http://www.mosqueedeparis.net/" target="_blank">La Mosquée de Paris</a></h5>
                     <p>One of the largest mosques in France, serving authentic Moroccan treats on a tiled terrace and featuring traditional Hammam baths.</p>
 
-                    <h5><a href="http://www.french-gardens.com/gardens/jardindeluxembourg.php">The Luxembourg Gardens</a></h5>
+                    <h5><a href="http://www.french-gardens.com/gardens/jardindeluxembourg.php" target="_blank">The Luxembourg Gardens</a></h5>
                     <p>Expanses, fountains, and sculpture gardens offer a peaceful oasis from city life.</p>
 
 
