--- a/new-site/about/masthead.html
+++ b/new-site/about/masthead.html
@@ -201,7 +201,7 @@
                        <h3>CONTRIBUTING WRITERS</h3>
                        <p><a href="https://www.linkedin.com/in/francisca-rojas-043893/">Francisca Rojas</a><br>
                        <a href="http://www.emilyknathan.com">Emily K Nathan</a><br>
-                       <a href="http://www.emilyknathan.com">Flora Tsapovsky</a></p>
+                       <a href="http://www.bicoastalista.com/">Flora Tsapovsky</a></p>
                        <h3>PRESS INQUIRIES &amp; AD SALES</h3>
                        <p><a href="mailto:jill@tinyatlasquarterly.com">Jill Hudes Lindenbaum</a></p>
                        </div>
