--- a/new-site/index.html
+++ b/new-site/index.html
@@ -270,7 +270,7 @@
             	<div id="social-share">
         		  <div id="social-labels">
         				<div id="share-label">SHARE</div>
-        				<div id="newsletter-label" style="font-size:0.8em;display:block; float: left; width: 50%; text-align: center;"><span>SUBSCRIBE</span></div>
+        				<div id="newsletter-label" style="font-size:0.8em;display:block; float: left; width: 50%; text-align: center;"><span><a href="#" class="newsletter">SUBSCRIBE</a></span></div>
         				<div style="clear: both; height: 1px;"></div>
         		  </div>
         			<ul id="share-menu">
