--- a/new-site/tel-aviv/index.html
+++ b/new-site/tel-aviv/index.html
@@ -533,7 +533,7 @@
 
                                          <h4>Eat:</h4>
 
-                                         <h5><a href="https://www.halutzim3.com/" target="_blank">HaHlutzim 3</a></h5>
+                                         <h5><a href="https://www.halutzim3.com/" target="_blank">HaHalutzim 3</a></h5>
                                          <p>An intimate restaurant by Eytan Vanunu and Naama Szterenlicht.</p>
 
                                          <h5><a href="http://dalidatlv.co.il/" target="_blank">Dalida</a></h5>
@@ -544,9 +544,6 @@
 
                                          <h5><a href="https://www.facebook.com/CaffeKaymak/" target="_blank">Cafe Kaimak</a></h5>
                                          <p>A tiny coffee shop perfect for breakfast.</p>
-
-                                         <h5><a href="https://www.facebook.com/Barmitzvah.kaymak/" target="_blank">Bar Mitzva</a></h5>
-                                         <p>A small local bar with unpretentious atmosphere.</p>
 
                                          <h5><a href="https://www.facebook.com/levinsky41/" target="_blank">Cafe Levinsky 41</a></h5>
                                          <p>A tiny kiosk serving delicious sparkly drinks.</p>
